# midas

./: .gitignore  .yamllint.yml  LICENSE  README.md  lint.sh  mypy.ini  pyproject.toml  test.sh
.github/workflows/: github.yml
conf/base/: catalog.yml  logging.yml  pipelines.yml
data/01_raw/: snp_names.json
midas/nodes/: kedro_utils.py  raw_data_acquisition.py
tests/e2e/: test_e2e.py
